--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html, body {
   margin: 0;
   padding: 0;
@@ -72,6 +71,8 @@ hr {
 .page_width {
   padding: 0px 50px;
   margin: 0 auto;
+  left: 0;
+  top: 0;
   max-width: 1200px;
   position: relative;
 }
@@ -91,10 +92,22 @@ body {
 }
 
 h1 {
-  text-align: center;
   font-family: "Comfortaa", cursive;
   text-transform: uppercase;
-  color: #3bdb3b;
+  color: #434343;
+  margin-top: 50px;
+  position: relative;
+}
+h1::before {
+  content: "";
+  width: 100%;
+  height: 2px;
+  left: -101%;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background-color: #434343;
+  position: absolute;
 }
 
 a {
@@ -103,73 +116,332 @@ a {
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
-a:hover {
-  color: ç;
+
+.comming_soon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #434343;
+  text-align: left;
+  position: relative;
+  z-index: 2;
+  height: 100%;
+}
+.comming_soon::before {
+  content: "";
+  width: 100%;
+  height: 200%;
+  left: -40%;
+  top: 0;
+  background: #fff;
+  position: absolute;
+  z-index: 0;
 }
 
-.zaglushka {
-  margin-top: 280px;
+.text {
+  position: relative;
+  z-index: 1;
+}
+
+span {
+  color: #14AC0B;
 }
 
 .contacts {
   margin-top: 70px;
-  width: 100%;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  width: 50%;
+  z-index: 1;
 }
 .contacts a {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   display: block;
-  width: 20%;
-  text-align: center;
-  padding: 40px 0;
-  border: 1px solid #434343;
-  border-radius: 10px;
+  font-size: 18px;
+  margin-bottom: 10px;
+  display: block;
+  width: 100%;
+  padding: 10px 0;
+  border-bottom: 1px solid #434343;
 }
 .contacts a:hover {
-  color: #3bdb3b;
-  border: 1px solid #3bdb3b;
+  padding-top: 25px;
+  border-bottom: 5px solid #434343;
 }
 
-@media screen and (max-width: 1240px) {
-  .zaglushka {
-    margin-top: 180px;
+.logo {
+  width: 400px;
+  display: block;
+  margin-top: 100px;
+}
+
+.gears_big {
+  position: absolute;
+  right: 0px;
+  bottom: -150px;
+  width: 600px;
+  -webkit-animation: rot 4s infinite;
+          animation: rot 4s infinite;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.gears_smole {
+  opacity: 60%;
+  position: absolute;
+  right: 500px;
+  bottom: -200px;
+  width: 520px;
+  -webkit-animation: invert-rot 3s infinite;
+          animation: invert-rot 3s infinite;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -webkit-filter: blur(4px);
+          filter: blur(4px);
+}
+
+.giars_b_2 {
+  left: auto;
+  top: -150px;
+  right: 0px;
+  opacity: 80%;
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
+  -webkit-animation: invert-rot 6s infinite;
+          animation: invert-rot 6s infinite;
+}
+
+.gears_s_2 {
+  left: auto;
+  right: -320px;
+  bottom: 180px;
+}
+
+.bigst {
+  width: 800px;
+  top: -170px;
+  right: 500px;
+}
+
+@-webkit-keyframes rot {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rot {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes invert-rot {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg);
+  }
+}
+@keyframes invert-rot {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg);
+  }
+}
+@media screen and (max-width: 1600px) {
+  .gears_big {
+    width: 500px;
+    bottom: -100px;
+  }
+
+  .gears_smole {
+    width: 450px;
+    right: 400px;
+    bottom: -100px;
+  }
+
+  .giars_b_2 {
+    top: -100px;
+  }
+
+  .gears_s_2 {
+    left: auto;
+    right: -220px;
+    bottom: 230px;
+  }
+
+  .bigst {
+    width: 650px;
+    top: -100px;
+    right: 400px;
+  }
+}
+@media screen and (max-width: 1380px) {
+  .gears_big {
+    width: 450px;
+    right: -50px;
+    bottom: -100px;
+  }
+
+  .gears_smole {
+    width: 350px;
+  }
+
+  .giars_b_2 {
+    top: -150px;
+  }
+
+  .bigst {
+    width: 550px;
+    top: -50px;
+    right: 330px;
+  }
+}
+@media screen and (max-width: 1040px) {
+  .comming_soon {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 50%;
+  }
+  .comming_soon::before {
+    height: 120%;
+    width: 150%;
+  }
+
+  h1:after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    left: auto;
+    right: -101%;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    background-color: #434343;
+    position: absolute;
   }
 
   .contacts {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    margin-top: 40px;
+  }
+
+  .logo {
+    width: 330px;
+    margin: 0 auto;
+    margin-top: 50px;
+  }
+
+  .gears_s_2 {
+    display: none;
+  }
+
+  .gears_b_2 {
+    display: none;
+  }
+
+  .bigst {
+    width: 600px;
+    top: auto;
+    right: auto;
+    left: -150px;
+  }
+}
+@media screen and (max-width: 870px) {
+  .gears_big {
+    width: 300px;
+  }
+
+  .gears_smole {
+    width: 250px;
+    right: 300px;
+  }
+
+  .bigst {
+    width: 500px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .contacts {
+    width: 75%;
+  }
+}
+@media screen and (max-width: 640px) {
+  .gears_smole {
+    display: none;
+  }
+}
+@media screen and (max-width: 550px) {
+  h1 {
+    font-size: 25px;
+    text-align: center;
+  }
+  h1:before {
+    left: -100%;
+  }
+  h1::after {
+    right: -100%;
+  }
+
+  P {
+    width: 90%;
+    margin: 10px auto 0 auto;
+    text-align: center;
+  }
+
+  .contacts {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 540px) {
+  .gears_big {
+    width: 50%;
+  }
+
+  .bigst {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 420px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+  .logo {
+    width: 200px;
+  }
+
+  .gears_big {
     width: 70%;
-    margin: 70px auto 0 auto;
-  }
-  .contacts a {
-    width: 45%;
-    margin-bottom: 20px;
-  }
-}
-@media screen and (max-width: 795px) {
-  .contacts {
-    width: 100%;
-    margin: 70px 0 0 0;
-  }
-  .contacts a {
-    width: 45%;
-    margin-bottom: 20px;
-  }
-}
-@media screen and (max-width: 590px) {
-  .zaglushka {
-    margin-top: 80px;
   }
 
-  .contacts a {
-    width: 100%;
-    margin-bottom: 20px;
+  .bigst {
+    width: 110%;
+    left: -200px;
   }
 }
 /*# sourceMappingURL=style.css.map */
